@@ -1,13 +1,12 @@
-export GRADLE_OPTS="-Xmx2048m -Xms256m -XX:MaxPermSize=768m -XX:+CMSClassUnloadingEnabled -XX:+HeapDumpOnOutOfMemoryError" 
-
+#!/bin/bash
 
 EXIT_STATUS=0
+./gradlew testClasses || EXIT_STATUS=$?
 ./gradlew grails-datastore-gorm-hibernate:test || EXIT_STATUS=$?
 ./gradlew grails-datastore-gorm-hibernate4:test || EXIT_STATUS=$?
 ./gradlew grails-datastore-gorm-mongodb:test || EXIT_STATUS=$?
 ./gradlew grails-datastore-gorm-redis:test || EXIT_STATUS=$?
 ./gradlew grails-datastore-gorm-test:test || EXIT_STATUS=$?
-
 
 version=$(grep 'projectVersion =' build.gradle)
 version=${version//[[:blank:]]/}
